[package]
name = "libtcc"
version = "0.2.0"
authors = ["sam <sunhaoyl@outlook.com>"]
edition = "2018"
description = "Rust binding for libtcc"
links = "tcc"
license = "MIT"
homepage = "https://github.com/SunHao-0/libtcc"
readme = "README.md"
repository = "https://github.com/SunHao-0/libtcc"
keywords = ["tcc", "jit", "ffi"]
build = "build.rs"
categories = ["external-ffi-bindings", "api-bindings"]
documentation = "https://docs.rs/libtcc/"
exclude = [".gitignore", "codecov.yml", ".github/**"]

[badges]
codecov = { repository = "SunHao-0/libtcc", branch = "master", service = "github" }

[dependencies]

[build-dependencies]
cc = "1.0.52"

[profile.release]
opt-level = 3